[package]
name = "persyfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ambassador = "0.3.1"
ambassador = { path = "/mnt/bkel/vi/src/ambassador/ambassador"}
anyhow = "1.0.58"
bincode = "1.3.3"
dashmap = "5.3.4"
either = "1.6.1"
env_logger = { version = "0.9.0", default-features = false }
fuser = { version = "0.11.0", features = ["serializable"] }
gumdrop = "0.8.1"
libc = "0.2.126"
log = "0.4.17"
persy = "1.2.6"
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.31"
